--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@ img {
 /* ===============HEADER===================== */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -139,9 +142,8 @@ img {
 
 /* ===============HERO===================== */
 
-.hero-container {
-  max-width: 496px;
-  text-align: center;
+.container hero {
+  max-width: 1440px;
 }
 
 .section-hero {
@@ -151,11 +153,14 @@ img {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/background-hero.jpg);
+    max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  
 }
 
 .section-hero-title {
