--- a/css/styles.css
+++ b/css/styles.css
@@ -142,10 +142,6 @@ img {
 
 /* ===============HERO===================== */
 
-.container hero {
-  max-width: 1440px;
-}
-
 .section-hero {
   background-color: #2e2f42;
   background-image: linear-gradient(
@@ -189,6 +185,7 @@ img {
   border: none;
   border-radius: 4px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-hero-btn:focus {
