--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,18 @@ img {
 .section-goals-item {
   width: calc((100% - 72px) / 4);
 }
+
+.section-goals-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+
 /* ============Section Our team============= */
 
 .section-team {
