--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,9 @@ img {
 
 .section-team {
   background-color: #f4f4fd;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-team-title {
@@ -294,6 +297,34 @@ img {
   padding-bottom: 32px;
 }
 
+.section-team-icon {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.team-icon-instagram {
+  width: 40px;
+  height: 40px;
+}
+.team-icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.team-icon-link:hover {
+  background-color: #404bbf;
+}
+.team-icon-link:focus {
+  background-color: #404bbf;
+}
+.icon-instagram {
+  fill: #f4f4fd;
+}
 /* ===========Section portfolio============= */
 
 .portfolio-title {
