--- a/css/styles.css
+++ b/css/styles.css
@@ -267,6 +267,9 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-team-subtitle {
@@ -303,9 +306,10 @@ img {
   gap: 24px;
 }
 
-.team-icon-instagram {
+.team-icon-item {
   width: 40px;
   height: 40px;
+  
 }
 .team-icon-link {
   width: 100%;
@@ -315,6 +319,8 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-icon-link:hover {
   background-color: #404bbf;
@@ -322,9 +328,10 @@ img {
 .team-icon-link:focus {
   background-color: #404bbf;
 }
-.icon-instagram {
+.icon-icon {
   fill: #f4f4fd;
 }
+
 /* ===========Section portfolio============= */
 
 .portfolio-title {
