--- a/css/styles.css
+++ b/css/styles.css
@@ -382,9 +382,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.portfolio-img-text:hover {
-  transform: translateY(0%);
-}
+
 
 .portfolio-img-banking {
   position: relative;
@@ -403,6 +401,9 @@ img {
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hiden-text {
+  transform: translateY(0%);
 }
 
 /* ========================================= */
