--- a/css/styles.css
+++ b/css/styles.css
@@ -416,10 +416,12 @@ img {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
-  display: flex;
-  align-items: baseline;
+  
 }
-
+.footer-content {
+display: flex;
+align-items: baseline;
+}
 .footer-logo-text {
   margin-right: 120px;
 }
@@ -462,6 +464,7 @@ img {
 .footer-icons-item {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon-link {
   width: 100%;
