--- a/css/styles.css
+++ b/css/styles.css
@@ -418,7 +418,7 @@ img {
   padding-bottom: 100px;
   
 }
-.footer-content {
+.footer-container {
 display: flex;
 align-items: baseline;
 }
@@ -449,6 +449,7 @@ align-items: baseline;
   display: inline-block;
   margin-bottom: 16px;
 }
+
 .footer-socialmedia {
   font-weight: 500;
   font-size: 16px;
@@ -457,14 +458,16 @@ align-items: baseline;
   color: #FFFFFF;
   margin-bottom: 16px;
 }
+
 .footer-icons-list {
   display: flex;
   gap: 16px;
+  
 }
 .footer-icons-item {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .footer-icon-link {
   width: 100%;
@@ -474,10 +477,13 @@ align-items: baseline;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .footer-icon-link:hover{
 background-color: #31d0aa;
 }
+
 .footer-icon-link:focus{
   background-color: #31d0aa;
 }
