--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,7 @@ img {
 .header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -149,14 +148,13 @@ img {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/background-hero.jpg);
-    max-width: 1440px;
+  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
-  
 }
 
 .section-hero-title {
@@ -242,14 +240,12 @@ img {
   margin-bottom: 8px;
 }
 
-
 /* ============Section Our team============= */
 
 .section-team {
   background-color: #f4f4fd;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-team-title {
@@ -268,8 +264,7 @@ img {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-team-subtitle {
@@ -309,7 +304,6 @@ img {
 .team-icon-item {
   width: 40px;
   height: 40px;
-  
 }
 .team-icon-link {
   width: 100%;
@@ -355,11 +349,9 @@ img {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .name-app {
   padding: 32px 16px;
@@ -407,7 +399,6 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 /* ========================================= */
 
 /* =============FOOTER================= */
@@ -416,11 +407,10 @@ img {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
-  
 }
 .footer-container {
-display: flex;
-align-items: baseline;
+  display: flex;
+  align-items: baseline;
 }
 .footer-logo-text {
   margin-right: 120px;
@@ -455,20 +445,19 @@ align-items: baseline;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 16px;
 }
 
 .footer-icons-list {
   display: flex;
   gap: 16px;
-  
 }
 .footer-icons-item {
   width: 40px;
   height: 40px;
-  
 }
+
 .footer-icon-link {
   width: 100%;
   height: 100%;
@@ -477,14 +466,14 @@ align-items: baseline;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-icon-link:hover{
-background-color: #31d0aa;
+.footer-icon-link:hover {
+  background-color: #31d0aa;
 }
 
-.footer-icon-link:focus{
+.footer-icon-link:focus {
   background-color: #31d0aa;
 }
 
