--- a/css/styles.css
+++ b/css/styles.css
@@ -398,6 +398,9 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.portfolio-item:hover .portfolio-img-text {
+  transform: translateY(0%);
+}
 
 /* ========================================= */
 
